--- a/src/app.html
+++ b/src/app.html
@@ -7,57 +7,57 @@
 
 		<style>
 			@font-face {
-				font-family: "Futura"; font-style: normal; font-display: swap;
+				font-family: "Futura"; font-style: normal;
 				font-weight: bold;
 				src: url("/fonts/Futura-Bold.woff2") format("woff2");
 			}
 			@font-face {
-				font-family: "Inter"; font-style: normal; font-display: swap;
+				font-family: "Inter"; font-style: normal;
 				font-weight: 300;
 				src: url("/fonts/Inter-Light.woff2") format("woff2");
 			}
 			@font-face {
-				font-family: "Inter"; font-style: italic; font-display: swap;
+				font-family: "Inter"; font-style: italic;
 				font-weight: 300;
 				src: url("/fonts/Inter-LightItalic.woff2") format("woff2");
 			}
 			@font-face {
-				font-family: "Inter"; font-style: normal; font-display: swap;
+				font-family: "Inter"; font-style: normal;
 				font-weight: 400;
 				src: url("/fonts/Inter-Regular.woff2") format("woff2");
 			}
 			@font-face {
-				font-family: "Inter"; font-style: italic; font-display: swap;
+				font-family: "Inter"; font-style: italic;
 				font-weight: 400;
 				src: url("/fonts/Inter-Italic.woff2") format("woff2");
 			}
 			@font-face {
-				font-family: "Inter"; font-style: normal; font-display: swap;
+				font-family: "Inter"; font-style: normal;
 				font-weight: 500;
 				src: url("/fonts/Inter-Medium.woff2") format("woff2");
 			}
 			@font-face {
-				font-family: "Inter"; font-style: italic; font-display: swap;
+				font-family: "Inter"; font-style: italic;
 				font-weight: 500;
 				src: url("/fonts/Inter-MediumItalic.woff2") format("woff2");
 			}
 			@font-face {
-				font-family: "Inter"; font-style: normal; font-display: swap;
+				font-family: "Inter"; font-style: normal;
 				font-weight: 700;
 				src: url("/fonts/Inter-Bold.woff2") format("woff2");
 			}
 			@font-face {
-				font-family: "Inter"; font-style: italic; font-display: swap;
+				font-family: "Inter"; font-style: italic;
 				font-weight: 700;
 				src: url("/fonts/Inter-BoldItalic.woff2") format("woff2");
 			}
 			@font-face {
-				font-family: "Inter"; font-style: normal; font-display: swap;
+				font-family: "Inter"; font-style: normal;
 				font-weight: 900;
 				src: url("/fonts/Inter-Black.woff2") format("woff2");
 			}
 			@font-face {
-				font-family: "Inter"; font-style: italic; font-display: swap;
+				font-family: "Inter"; font-style: italic;
 				font-weight: 900;
 				src: url("/fonts/Inter-BlackItalic.woff2") format("woff2");
 			}
