--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.svg" type="image/svg+xml">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="google-site-verification" content="HgA-ASf-lExgg9-PZtURTeqUx7zsyXcxbIAkzogEhoE" />
 
 		<style>
 			@font-face {
